--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: # the website title (if blank, full name will be used instead)
+title: Atsuki Kotani # the website title (if blank, full name will be used instead)
 first_name: Atsuki
 middle_name:
 last_name: Kotani
